--- a/1-SPR25_SWD392_ClothingCustomization/1-SPR25_SWD392_ClothingCustomization.csproj
+++ b/1-SPR25_SWD392_ClothingCustomization/1-SPR25_SWD392_ClothingCustomization.csproj
@@ -5,6 +5,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>_1_SPR25_SWD392_ClothingCustomization</RootNamespace>
+    <UserSecretsId>8f49d35c-daf6-4b59-aa31-5fae5777e223</UserSecretsId>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
@@ -13,6 +15,10 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
   </ItemGroup>
 
 </Project>
