Add MoMo Service

--- a/1-SPR25_SWD392_ClothingCustomization/appsettings.json
+++ b/1-SPR25_SWD392_ClothingCustomization/appsettings.json
@@ -62,8 +62,10 @@
     "PartnerCode": "MOMO5RGX20191128",
     "AccessKey": "M8brj9K6E22vXoDB",
     "SecretKey": "nqQiVSgDMy809JoPF6OzP5OdBUB550Y4",
-    "ReturnUrl": "https://yourdomain.com/momo/return",
-    "NotifyUrl": "https://yourdomain.com/api/momo/callback"
+    "Endpoint": "https://test-payment.momo.vn/v2/gateway/api/create",
+    "ReturnUrl": "https://swd-fe-nine.vercel.app/payment-success",
+    "NotifyUrl": "https://localhost:7163/MoMo/Callback",
+    "ipnUrl": "https://localhost:7163/MoMo/Callback"
   },
 
   "PublicMoMo": {
