Upload Image to 3rd party

--- a/1-SPR25_SWD392_ClothingCustomization/appsettings.json
+++ b/1-SPR25_SWD392_ClothingCustomization/appsettings.json
@@ -47,7 +47,7 @@
     "CurrCode": "VND",
     "Version": "2.1.0",
     "Locale": "vn",
-    "CallbackUrl": "https://localhost:7163/Callback"
+    "CallbackUrl": "https://localhost:7163/VNPay/Callback"
   },
 
 
