Update Customize Product

--- a/1-SPR25_SWD392_ClothingCustomization/appsettings.json
+++ b/1-SPR25_SWD392_ClothingCustomization/appsettings.json
@@ -7,11 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-
-    //"DB": "Server=NGUYEN_KHANG\\NGUYENKHANG;uid=sa;pwd=123456789;database=ClothesCusShop;TrustServerCertificate=True"   
-    //"DB": "Server=.\\MSSQL2022;uid=sa;pwd=12345;database=ClothesCusShop;TrustServerCertificate=True"
-    //"DB": "Server=DESKTOP-GJ7D6AG\\SQLEXPRESS;uid=sa12345;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True",
-    //"DB": "Data Source=SQL1002.site4now.net;Initial Catalog=db_ab6cca_sa;User Id=db_ab6cca_sa_admin;Password=Tyty123456"
+    //"DB": "Server=DESKTOP-GJ7D6AG\\SQLEXPRESS;uid=sa12345;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
     "DB": "Server=DUY\\DUYVO;uid=sa;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
     // "DB": "Data Source=SQL1003.site4now.net;Initial Catalog=db_aba673_hai3004;User Id=db_aba673_hai3004_admin; Password=hoanghai2003"
   },
