--- a/1-SPR25_SWD392_ClothingCustomization/appsettings.json
+++ b/1-SPR25_SWD392_ClothingCustomization/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DB": "Server=LAPTOP-RR1RKU60;uid=sa;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
-    //"DB": "Server=DUY\\DUYVO;uid=sa;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
+    // "DB": "Server=LAPTOP-RR1RKU60;uid=sa;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
+    "DB": "Server=DUY\\DUYVO;uid=sa;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
     // "DB": "Data Source=SQL1003.site4now.net;Initial Catalog=db_aba673_hai3004;User Id=db_aba673_hai3004_admin; Password=hoanghai2003"
   },
 
