--- a/1-SPR25_SWD392_ClothingCustomization/appsettings.json
+++ b/1-SPR25_SWD392_ClothingCustomization/appsettings.json
@@ -7,9 +7,13 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    // "DB": "Server=LAPTOP-RR1RKU60;uid=sa;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
-    "DB": "Server=DUY\\DUYVO;uid=sa;pwd=12345;database=ClothesCusShop_v2_1;TrustServerCertificate=True"
+    // "DB": "Server=LAPTOP-RR1RKU60;uid=sa;pwd=12345;database=ClothesCusShop_v2_2;TrustServerCertificate=True"
+    // "DB": "Server=DESKTOP-GJ7D6AG\\SQLEXPRESS;uid=sa12345;pwd=12345;database=ClothesCusShop_v2_2;TrustServerCertificate=True",
+    // "DB": "Server=DUY\\DUYVO;uid=sa;pwd=12345;database=ClothesCusShop_v2_2;TrustServerCertificate=True"
+
     // "DB": "Data Source=SQL1003.site4now.net;Initial Catalog=db_aba673_hai3004;User Id=db_aba673_hai3004_admin; Password=hoanghai2003"
+    "DB": "Data Source=SQL1004.site4now.net;Initial Catalog=db_abb523_thisaonao;User Id=db_abb523_thisaonao_admin;Password=Ghostdark123"
+
   },
 
   //"FrontendRedirectUrl": "https://cre8wrearx.vercel.app",
