--- a/4-BusinessObject/4-BusinessObject.csproj
+++ b/4-BusinessObject/4-BusinessObject.csproj
@@ -25,6 +25,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.1" />
+    <PackageReference Include="QRCoder" Version="1.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.0.0" />
     <PackageReference Include="VNPAY.NET" Version="8.5.0" />
   </ItemGroup>
