--- a/1-SPR25_SWD392_ClothingCustomization/appsettings.json
+++ b/1-SPR25_SWD392_ClothingCustomization/appsettings.json
@@ -52,7 +52,8 @@
     "ClientId": "217165512763-s1lb34j39b3i39gf2peh9vk9bmpnkkl9.apps.googleusercontent.com",
     "ClientSecret": "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",
     // "RedirectUri": "https://localhost:7163/api/auth/google-callback"
-    "RedirectUri": "https://hai3004-001-site1.anytempurl.com/api/auth/google-callback"
+    // "RedirectUri": "https://hai3004-001-site1.anytempurl.com/api/auth/google-callback"
+    "RedirectUri": "https://thisaonao-001-site1.rtempurl.com/api/auth/google-callback"
   },
 
   "MoMo": {
