--- a/1-SPR25_SWD392_ClothingCustomization/appsettings.json
+++ b/1-SPR25_SWD392_ClothingCustomization/appsettings.json
@@ -8,18 +8,20 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // "DB": "Server=LAPTOP-RR1RKU60;uid=sa;pwd=12345;database=ClothesCusShop_v2_2;TrustServerCertificate=True"
-    // "DB": "Server=DESKTOP-GJ7D6AG\\SQLEXPRESS;uid=sa12345;pwd=12345;database=ClothesCusShop_v2_2;TrustServerCertificate=True",
+    // "DB": "Server=DESKTOP-GJ7D6AG\\SQLEXPRESS;uid=sa12345;pwd=12345;database=ClothesCusShop_v3;TrustServerCertificate=True",
     // "DB": "Server=DUY\\DUYVO;uid=sa;pwd=12345;database=ClothesCusShop_v2_2;TrustServerCertificate=True"
 
     // "DB": "Data Source=SQL1003.site4now.net;Initial Catalog=db_aba673_hai3004;User Id=db_aba673_hai3004_admin; Password=hoanghai2003"
+    //  "DB": "Data Source=SQL1004.site4now.net;Initial Catalog=db_abb523_thisaonao;User Id=db_abb523_thisaonao_admin;Password=Ghostdark123"
     "DB": "Data Source=SQL1004.site4now.net;Initial Catalog=db_abb523_thisaonao;User Id=db_abb523_thisaonao_admin;Password=Ghostdark123"
+
 
   },
 
-  //"FrontendRedirectUrl": "https://cre8wrearx.vercel.app",
+  //"FrontendRedirectUrl": "https://cre8wrearx-git-duyv1-voduys-projects.vercel.app",
   //"PaymentRedirectUrls": {
-  //  "Success": "https://cre8wrearx.vercel.app/payment-success",
-  //  "Failed": "https://cre8wrearx.vercel.app/payment-failed"
+  //  "Success": "https://cre8wrearx-git-duyv1-voduys-projects.vercel.app/payment-success",
+  //  "Failed": "https://cre8wrearx-git-duyv1-voduys-projects.vercel.app/payment-failed"
   //},
 
   "FrontendRedirectUrl": "http://localhost:5173",
